tests/samples/negative/generics/private_generic_function_import.ax
module private_generic_function_import;

import samplelib.generic_private;

fn main() -> i32 {
    let value = hidden_id(1);
    return value;
}
